--- a/Kube_Labels_Namespaces_Selectors_Pod-deletion.yaml
+++ b/Kube_Labels_Namespaces_Selectors_Pod-deletion.yaml
@@ -46,7 +46,9 @@ Labels: (also, Labels can be assigned to any kube object)
             = == !=:    kubectl get pods -l <label>=<value>'
                         kubectl get pods -l <label>!=<value>'
             in: kubectl get pods -l '<label> in ( <value>[,<val2>[..]] )'
-                kubectl get pods -l '<label> notin ( <value>[,<val2>[..]] )'         
+                kubectl get pods -l '<label> notin ( <value>[,<val2>[..]] )'
+                
+# Annotations ========================
 Annotations:
     Add annotation: kubectl annotate pod <podName> company_name/creator_email="me@example.com"
 
@@ -87,7 +89,7 @@ Labels:
     
     
     
-#=== Namespaces
+# Namespaces ======================
 ---
 apiVersion: v1
 kind: Namespace
