--- a/Kube.yaml
+++ b/Kube.yaml
@@ -44,3 +44,70 @@ ConfigMaps:
     A valid DNS subdomain name should be given to ConfigMap.
     The key value that is recorded in the data field and the key value in the binaryData field cannot both be the same.
 
+
+# =================== Upgrade Kubernetes ==================
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
